--- a/social/social_media/templates/basic.html
+++ b/social/social_media/templates/basic.html
@@ -372,17 +372,9 @@
         <div id="settings" class="subnav">
             <div class="subnav-inner">
                 <button>
-                    <span>Display</span>
+                    <span><a href="{% url 'savedpost' %}">Saved post</a></span>
                 </button>
-                <button>
-                    <span>Audio</span>
-                </button>
-                <button>
-                    <span>Interface</span>
-                </button>
-                <button>
-                    <span>Accessibility</span>
-                </button>
+                
             </div>
         </div>
         <button onclick="handleHeaderClicked('profile')">
